openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-service
  labels:
    app: news-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: news-service
