openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: news-service
  labels:
    app: news-service
spec:
  to:
    kind: Service
    name: news-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
